# fgPEM

./: CMakeLists.txt  ReadME.md  data_structure.h  enmatp.cpp  enmatp.h  enmatp_fg.cpp  enmatp_fg.h  generator.cpp  main.cpp  rein.h
paras/: paras_1.txt
